--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bemm": "^1.2.1",
+    "bemm": "^1.2.2",
+    "mitt": "^3.0.1",
     "open-icon": "^1.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
